# jeff-mitchell-dev

./: .gitignore  .gitmodules  Cargo.toml  README.md  Shuttle.toml  jdm-dev.toml  justfile
assets/: screen.css
content/: demystifying_actix_web_middleware.md  first_post.md  fourth_post.md  hello_odin.md  rust_177.md  second_post.md  spotlight_on_actix_web.md  spotlight_on_yew.md  third_post.md
content/html/: output.html
migrations/: 20240317203318_jdm-dev-db.down.sql  20240317203318_jdm-dev-db.up.sql
public/: 404.html  about.html  atom.xml  index.html  projects.html  resources.html  robots.txt  search_index.en.json  sitemap.xml
public/about/: index.html
public/blog/: index.html
public/categories/: index.html
public/projects/: index.html
server/: Cargo.toml  Shuttle.toml
server/src/: lib.rs
server/static/: index.html  jdm-dev-site-220fe32d1db16807.js  jdm-dev-site-220fe32d1db16807_bg.wasm  jdm-dev-site-83ac6526e3f9dc3c.js  jdm-dev-site-83ac6526e3f9dc3c_bg.wasm  jdm-dev-site-9064cd40fb8e33db.js  jdm-dev-site-9064cd40fb8e33db_bg.wasm
site/: Cargo.toml  Trunk.toml  config.toml  index.html
site/content/: _index.md
site/content/about/: _index.md
site/content/blog/: 2022_04_05_baby_steps_with_rust.md  2022_04_09_constants.md  2022_04_12_pouring_the_footings.md  2022_04_18_pouring_the_footings_compound.md  2022_04_22_lets_get_functional.md  2022_05_01_controlling_the_flow.md  2023_06_05_simple_website_hosting_with_shuttle.md  2023_11_07_the_mighty_vector.md  2024_07_14_jeff_mitchell_dev_re-reloaded.md  2024_07_15_nf_program_of_the_week.md  2024_07_24_markdown_to_html_program_of_the_week.md  2024_07_24_string_theory.md  2024_07_30_string_theory.md  2024_07_31_launching_the_web_with_rocket.md  2024_07_31_rust_pdf_extractor_program_of_the_week.md  2024_08_01_the_mystery_of_the_hashmap.md  2024_08_04_the_mystery_of_the_hashmap.md  2024_08_07_twir_highlight_no_preludes_no_globs.md  2024_08_15_serving_the_web_with_axum.md  2024_08_21_serving_the_web_with_axum.md  2024_08_22_this_week_in_rust.md  2024_08_23_git_bare_bones.md  2024_08_24_slow_down_to_speed_up.md  2024_08_25_the_mystery_of_the_hashmap.md  2024_08_27_error_handling.md  2024_08_27_good_html_a_solid_foundation.md  2024_08_28_error_handling.md  2024_08_29_this_week_in_rust.md  2024_08_31_the_utter_frustration_that_is_css.md  2024_09_01_error_handling.md  2024_09_01_utter_frustration_that_is_css_morning_after.md  2024_09_02_error_handling.md  2024_09_05_this_week_in_rust.md  2024_09_07_100_days_of_static_site_generation.md  _index.md
site/content/blog/2022/: 2022_04_14_pouring_the_footings_single.md
site/content/blog/2023/: 2024_08_14_this_week_in_rust.md
site/content/blog/2024/: 2024_08_23_git_bare_bones.md  2024_09_01_utter_frustration_that_is_css_morning_after.md  2024_09_12_this_week_in_rust.md  2024_09_14_error_handling.md  2024_09_22_generics.md  2024_09_26_getting_started_with_yew.md  2024_09_29_traits.md  2024_10_05_getting_started_with_yew.md  2024_10_15_techncial_difficulties.md
site/content/blog/2024_08_25_back_to_basics_how_the_web_works/: index.md
site/content/blog/2024_08_30_serving_the_web_with_rocket/: index.md
site/content/projects/: _index.md
site/content/resources/: _index.md
site/css/: screen.css
site/src/app/: bin.rs
site/src/content/: home.md  projects.md  writing.md
site/src/lib/: components.rs  mod.rs  routes.rs
site/src/lib/components/: footer.rs  header.rs  navigation.rs
site/src/lib/routes/: about.rs  home.rs  projects.rs  router.rs  writing.rs
site/templates/: 404.html  index.html
site/templates/macros/: footer.html  lists.html
templates/: 404.html  about.html  admin.html  article.html  articles.html  base.html  blog.html  index.html  music.html  photography.html  projects.html
(+235 files in other folders)
