# jeff-mitchell-dev package configuration
# site content built with Zola and served from the public directory
[package]
name = "jeff-mitchell-dev"
authors = ["Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev>"]
version = "0.10.0"
edition = "2021"
description = "My Zola blog, served up by Axum, hosted on Shuttle"
readme = "README.md"
repository = "https://github.com/sentinel1909/jeff-mitchell-dev.git"
license = "MIT"
publish = false

# server binary
[[bin]]
name = "jeff-mitchell-dev"
path = "src/bin/main.rs"

# server library
[lib]
name = "jeff_mitchell_dev_lib"
path = "src/lib/lib.rs"

# project dependencies
[dependencies]
axum = "0.7.6"
http = "1.1.0"
shuttle-axum = "0.47.0"
shuttle-runtime = { version = "0.47.0", default-features = false }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = [ "fs", "request-id", "trace", "util" ] }
tracing = { version = "0.1.40", features = [ "log" ] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1", features = [ "v4" ] }
