[package]
name = "jdm-dev-server"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.10.0", features = ["web-axum"] }
axum = "0.6.7"
sync_wrapper = "0.1.2"
axum-extra = { version = "0.5.0", features = ["spa"] }
shuttle-static-folder = "0.10.0"
